# place2polygon

./: .cursorrules  .env.example  .gitignore  NEWS_DEMO_README.md  PROGRESS.md  Place2Polygon_PRD.md  README.md  pyproject.toml  sample.txt
examples/: README.md
samples/: economic_developments.txt  global_conflict_zones.txt  international_landmarks.txt  local_places_of_interest.txt  natural_disasters.txt
scripts/: evaluate_performance.py  generate_dashboard.py  setup_github.sh
src/place2polygon/: __init__.py  __main__.py  cli.py
src/place2polygon/cache/: __init__.py  cache_manager.py  sqlite_cache.py
src/place2polygon/core/: __init__.py  boundary_selector.py  location_extractor.py  map_visualizer.py  nominatim_client.py
src/place2polygon/gemini/: __init__.py  documentation_provider.py  orchestrator.py
src/place2polygon/utils/: __init__.py  output_manager.py  rate_limiter.py  validators.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_boundary_selector.py  test_cache.py  test_location_extractor.py
